refactor : 회원가입, 로그아웃 응답 변경
- 302 -> 200 으로 변경
